Resolve layout shifting of TopNav during loading (#12)

--- a/src/components/layout/TopNav.module.scss
+++ b/src/components/layout/TopNav.module.scss
@@ -44,12 +44,3 @@
     display: none;
   }
 }
-
-.user {
-  margin-left: 24px;
-  font-size: 18px;
-
-  @media (max-width: 700px) {
-    margin-left: 0;
-  }
-}
